--- a/adquisiciondatos.ui
+++ b/adquisiciondatos.ui
@@ -340,12 +340,12 @@
         </font>
        </property>
        <property name="text">
-        <string>Textura de Lectura (hz):</string>
+        <string>Tasa de Lectura (hz):</string>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="texturaDeLecturaHzLineEdit"/>
+      <widget class="QLineEdit" name="tasaDeLecturaHzLineEdit"/>
      </item>
     </layout>
    </widget>
