--- a/cabecerasfits.ui
+++ b/cabecerasfits.ui
@@ -183,16 +183,6 @@
     <string>Foco del Telescopio:</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="focoTelescopioLineEdit">
-   <property name="geometry">
-    <rect>
-     <x>232</x>
-     <y>70</y>
-     <width>281</width>
-     <height>27</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
@@ -273,16 +263,6 @@
      <x>334</x>
      <y>130</y>
      <width>61</width>
-     <height>31</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="anguloHorarioMmLineEdit">
-   <property name="geometry">
-    <rect>
-     <x>284</x>
-     <y>130</y>
-     <width>41</width>
      <height>31</height>
     </rect>
    </property>
@@ -441,16 +421,6 @@
    </property>
    <property name="text">
     <string>:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="declinacionMmLineEdit">
-   <property name="geometry">
-    <rect>
-     <x>287</x>
-     <y>210</y>
-     <width>41</width>
-     <height>31</height>
-    </rect>
    </property>
   </widget>
   <widget class="QLineEdit" name="declinacionGgLineEdit">
@@ -1227,6 +1197,39 @@
    </property>
    <property name="text">
     <string>NO_SELECCIONADO</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="anguloHorarioMmLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>284</x>
+     <y>130</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>620</x>
+     <y>500</y>
+     <width>97</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>PushButton</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="declinacionMmLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>284</x>
+     <y>210</y>
+     <width>41</width>
+     <height>31</height>
+    </rect>
    </property>
   </widget>
  </widget>
