--- a/trunk/cabecerasfits.ui
+++ b/trunk/cabecerasfits.ui
@@ -183,6 +183,16 @@
     <string>Foco del Telescopio:</string>
    </property>
   </widget>
+  <widget class="QLineEdit" name="focoTelescopioLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>232</x>
+     <y>70</y>
+     <width>281</width>
+     <height>27</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
