Agregadas Expresiones regular para la ventana Cabecera Fits. Agregado boton Modia a la ventana Adquisicion de datos. Falta: *Crear otras expresiones regulares para ventana cabeceraFits(Faltan los ultimos 3 campos) y para la ventana Adquiscion de datos. *Verificar la logica de los botonos para la ventana Adquisicion de datos. *Conectar Boton Observar verificando todos los datos de ventana cabecera Fits. *Conectar Boton Salir y Boton Encabezados de la ventana adquisicionDatos. *Conectar el Log con toda la Aplicacion. *Verificar logica al cerrar ventana de cabeceraFits. (Mantener valor de los campos en variables auxiliares).

--- a/cabecerasfits.ui
+++ b/cabecerasfits.ui
@@ -29,7 +29,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>10</y>
+     <y>0</y>
      <width>281</width>
      <height>27</height>
     </rect>
@@ -42,7 +42,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
+     <y>0</y>
      <width>161</width>
      <height>21</height>
     </rect>
@@ -61,7 +61,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>50</y>
+     <y>40</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -80,7 +80,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>46</y>
+     <y>36</y>
      <width>41</width>
      <height>31</height>
     </rect>
@@ -90,7 +90,7 @@
    <property name="geometry">
     <rect>
      <x>284</x>
-     <y>46</y>
+     <y>36</y>
      <width>41</width>
      <height>31</height>
     </rect>
@@ -100,7 +100,7 @@
    <property name="geometry">
     <rect>
      <x>334</x>
-     <y>46</y>
+     <y>36</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -110,7 +110,7 @@
    <property name="geometry">
     <rect>
      <x>327</x>
-     <y>46</y>
+     <y>36</y>
      <width>16</width>
      <height>31</height>
     </rect>
@@ -129,7 +129,7 @@
    <property name="geometry">
     <rect>
      <x>277</x>
-     <y>46</y>
+     <y>36</y>
      <width>16</width>
      <height>31</height>
     </rect>
@@ -148,7 +148,7 @@
    <property name="geometry">
     <rect>
      <x>400</x>
-     <y>46</y>
+     <y>36</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -168,7 +168,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>90</y>
+     <y>80</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -187,7 +187,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>90</y>
+     <y>80</y>
      <width>281</width>
      <height>27</height>
     </rect>
@@ -197,7 +197,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>120</y>
+     <y>110</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -216,7 +216,7 @@
    <property name="geometry">
     <rect>
      <x>277</x>
-     <y>120</y>
+     <y>110</y>
      <width>61</width>
      <height>22</height>
     </rect>
@@ -229,7 +229,7 @@
    <property name="geometry">
     <rect>
      <x>337</x>
-     <y>120</y>
+     <y>110</y>
      <width>61</width>
      <height>22</height>
     </rect>
@@ -242,7 +242,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>150</y>
+     <y>140</y>
      <width>41</width>
      <height>31</height>
     </rect>
@@ -252,7 +252,7 @@
    <property name="geometry">
     <rect>
      <x>327</x>
-     <y>150</y>
+     <y>140</y>
      <width>16</width>
      <height>31</height>
     </rect>
@@ -271,7 +271,7 @@
    <property name="geometry">
     <rect>
      <x>284</x>
-     <y>150</y>
+     <y>140</y>
      <width>41</width>
      <height>31</height>
     </rect>
@@ -281,7 +281,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>160</y>
+     <y>150</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -300,7 +300,7 @@
    <property name="geometry">
     <rect>
      <x>400</x>
-     <y>150</y>
+     <y>140</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -320,7 +320,7 @@
    <property name="geometry">
     <rect>
      <x>277</x>
-     <y>150</y>
+     <y>140</y>
      <width>16</width>
      <height>31</height>
     </rect>
@@ -339,7 +339,7 @@
    <property name="geometry">
     <rect>
      <x>334</x>
-     <y>150</y>
+     <y>140</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -349,7 +349,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>235</y>
+     <y>225</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -368,7 +368,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>190</y>
+     <y>180</y>
      <width>281</width>
      <height>31</height>
     </rect>
@@ -377,8 +377,8 @@
   <widget class="QLabel" name="label_16">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>230</y>
+     <x>327</x>
+     <y>220</y>
      <width>16</width>
      <height>31</height>
     </rect>
@@ -397,7 +397,7 @@
    <property name="geometry">
     <rect>
      <x>403</x>
-     <y>230</y>
+     <y>220</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -416,8 +416,8 @@
   <widget class="QLabel" name="label_15">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>230</y>
+     <x>277</x>
+     <y>220</y>
      <width>16</width>
      <height>31</height>
     </rect>
@@ -436,7 +436,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>230</y>
+     <y>220</y>
      <width>41</width>
      <height>31</height>
     </rect>
@@ -446,7 +446,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>200</y>
+     <y>190</y>
      <width>211</width>
      <height>21</height>
     </rect>
@@ -466,7 +466,7 @@
    <property name="geometry">
     <rect>
      <x>284</x>
-     <y>230</y>
+     <y>220</y>
      <width>41</width>
      <height>31</height>
     </rect>
@@ -476,7 +476,7 @@
    <property name="geometry">
     <rect>
      <x>334</x>
-     <y>230</y>
+     <y>220</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -486,7 +486,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>270</y>
+     <y>260</y>
      <width>281</width>
      <height>27</height>
     </rect>
@@ -496,7 +496,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>270</y>
+     <y>260</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -515,7 +515,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>310</y>
+     <y>300</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -534,7 +534,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>310</y>
+     <y>300</y>
      <width>61</width>
      <height>27</height>
     </rect>
@@ -544,7 +544,7 @@
    <property name="geometry">
     <rect>
      <x>300</x>
-     <y>310</y>
+     <y>300</y>
      <width>61</width>
      <height>27</height>
     </rect>
@@ -554,7 +554,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>310</y>
+     <y>300</y>
      <width>61</width>
      <height>27</height>
     </rect>
@@ -564,7 +564,7 @@
    <property name="geometry">
     <rect>
      <x>440</x>
-     <y>310</y>
+     <y>300</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -574,7 +574,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>350</y>
+     <y>340</y>
      <width>61</width>
      <height>27</height>
     </rect>
@@ -584,7 +584,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>350</y>
+     <y>340</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -604,7 +604,7 @@
    <property name="geometry">
     <rect>
      <x>300</x>
-     <y>350</y>
+     <y>340</y>
      <width>61</width>
      <height>27</height>
     </rect>
@@ -614,7 +614,7 @@
    <property name="geometry">
     <rect>
      <x>370</x>
-     <y>350</y>
+     <y>340</y>
      <width>61</width>
      <height>27</height>
     </rect>
@@ -624,7 +624,7 @@
    <property name="geometry">
     <rect>
      <x>440</x>
-     <y>350</y>
+     <y>340</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -634,7 +634,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>390</y>
+     <y>380</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -653,7 +653,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>390</y>
+     <y>380</y>
      <width>281</width>
      <height>27</height>
     </rect>
@@ -663,7 +663,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>430</y>
+     <y>420</y>
      <width>281</width>
      <height>27</height>
     </rect>
@@ -673,7 +673,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>430</y>
+     <y>420</y>
      <width>201</width>
      <height>21</height>
     </rect>
@@ -692,7 +692,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>470</y>
+     <y>460</y>
      <width>281</width>
      <height>27</height>
     </rect>
@@ -702,7 +702,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>470</y>
+     <y>460</y>
      <width>201</width>
      <height>21</height>
     </rect>
@@ -721,7 +721,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>510</y>
+     <y>500</y>
      <width>201</width>
      <height>21</height>
     </rect>
@@ -740,7 +740,7 @@
    <property name="geometry">
     <rect>
      <x>232</x>
-     <y>510</y>
+     <y>500</y>
      <width>281</width>
      <height>27</height>
     </rect>
@@ -753,7 +753,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>10</y>
+     <y>0</y>
      <width>321</width>
      <height>27</height>
     </rect>
@@ -766,7 +766,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>15</y>
+     <y>5</y>
      <width>56</width>
      <height>17</height>
     </rect>
@@ -785,7 +785,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>40</y>
+     <y>30</y>
      <width>321</width>
      <height>27</height>
     </rect>
@@ -798,7 +798,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>44</y>
+     <y>35</y>
      <width>56</width>
      <height>17</height>
     </rect>
@@ -817,7 +817,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>75</y>
+     <y>60</y>
      <width>321</width>
      <height>27</height>
     </rect>
@@ -830,7 +830,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>80</y>
+     <y>65</y>
      <width>56</width>
      <height>17</height>
     </rect>
@@ -849,7 +849,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>115</y>
+     <y>95</y>
      <width>56</width>
      <height>17</height>
     </rect>
@@ -868,7 +868,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>110</y>
+     <y>90</y>
      <width>321</width>
      <height>27</height>
     </rect>
@@ -881,7 +881,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>157</y>
+     <y>130</y>
      <width>142</width>
      <height>17</height>
     </rect>
@@ -900,7 +900,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>150</y>
+     <y>120</y>
      <width>321</width>
      <height>27</height>
     </rect>
@@ -910,7 +910,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>190</y>
+     <y>160</y>
      <width>171</width>
      <height>27</height>
     </rect>
@@ -929,7 +929,7 @@
    <property name="geometry">
     <rect>
      <x>810</x>
-     <y>196</y>
+     <y>166</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -942,7 +942,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>190</y>
+     <y>160</y>
      <width>111</width>
      <height>27</height>
     </rect>
@@ -952,7 +952,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>230</y>
+     <y>200</y>
      <width>321</width>
      <height>27</height>
     </rect>
@@ -962,7 +962,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>235</y>
+     <y>205</y>
      <width>88</width>
      <height>17</height>
     </rect>
@@ -981,7 +981,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>280</y>
+     <y>250</y>
      <width>159</width>
      <height>17</height>
     </rect>
@@ -1000,7 +1000,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>274</y>
+     <y>244</y>
      <width>321</width>
      <height>27</height>
     </rect>
@@ -1010,7 +1010,7 @@
    <property name="geometry">
     <rect>
      <x>820</x>
-     <y>320</y>
+     <y>290</y>
      <width>111</width>
      <height>16</height>
     </rect>
@@ -1023,7 +1023,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>314</y>
+     <y>284</y>
      <width>111</width>
      <height>27</height>
     </rect>
@@ -1033,7 +1033,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>314</y>
+     <y>284</y>
      <width>171</width>
      <height>27</height>
     </rect>
@@ -1048,11 +1048,11 @@
     <string>Temperatura del domo:</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="temperaturaDomoLineEdit_2">
+  <widget class="QLineEdit" name="humedadDomoLineEdit">
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>350</y>
+     <y>320</y>
      <width>221</width>
      <height>27</height>
     </rect>
@@ -1062,7 +1062,7 @@
    <property name="geometry">
     <rect>
      <x>930</x>
-     <y>356</y>
+     <y>326</y>
      <width>21</width>
      <height>16</height>
     </rect>
@@ -1075,7 +1075,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>350</y>
+     <y>320</y>
      <width>171</width>
      <height>27</height>
     </rect>
@@ -1094,7 +1094,7 @@
    <property name="geometry">
     <rect>
      <x>790</x>
-     <y>396</y>
+     <y>366</y>
      <width>111</width>
      <height>20</height>
     </rect>
@@ -1107,7 +1107,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>390</y>
+     <y>360</y>
      <width>81</width>
      <height>27</height>
     </rect>
@@ -1117,7 +1117,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>390</y>
+     <y>360</y>
      <width>171</width>
      <height>27</height>
     </rect>
@@ -1136,7 +1136,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>420</y>
+     <y>390</y>
      <width>171</width>
      <height>27</height>
     </rect>
@@ -1155,7 +1155,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>420</y>
+     <y>390</y>
      <width>81</width>
      <height>27</height>
     </rect>
@@ -1165,7 +1165,7 @@
    <property name="geometry">
     <rect>
      <x>790</x>
-     <y>426</y>
+     <y>396</y>
      <width>111</width>
      <height>20</height>
     </rect>
@@ -1178,7 +1178,7 @@
    <property name="geometry">
     <rect>
      <x>700</x>
-     <y>454</y>
+     <y>424</y>
      <width>81</width>
      <height>27</height>
     </rect>
@@ -1188,7 +1188,7 @@
    <property name="geometry">
     <rect>
      <x>527</x>
-     <y>454</y>
+     <y>424</y>
      <width>171</width>
      <height>27</height>
     </rect>
@@ -1207,7 +1207,7 @@
    <property name="geometry">
     <rect>
      <x>790</x>
-     <y>460</y>
+     <y>430</y>
      <width>111</width>
      <height>20</height>
     </rect>
@@ -1220,7 +1220,7 @@
    <property name="geometry">
     <rect>
      <x>800</x>
-     <y>500</y>
+     <y>470</y>
      <width>201</width>
      <height>31</height>
     </rect>
