-Se creo una clase MyScrollArea. Se arreglo la vista del cursor en la ventana Visualizador (Ahora se hace con Qscroll area). Se muestra el valor del pixel(Este valor severifica en la matriz de la imagen fits) Falta: **Ventana Adquisicion de datos *Arreglar campo de tiempo de exposicion para flats guiado (verificar otras observaciones guiadas para ventana adquisicion de datos) *arreglar mensajes y tiempo del log *Cambiar animacion del boton observar **Ventana Modia *Conectar todos los botones de la ventana. *Algoritmo para realce de imagenes. *Crear zoom al hacer scroll. *cuentas fondo del cielo. *Reiniciar la imagen al completar la observacion *Completar ventana del panel administrativo *Crear base de datos para los usuarios

--- a/trunk/visualizador.ui
+++ b/trunk/visualizador.ui
@@ -320,6 +320,17 @@
     <string>0</string>
    </property>
   </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>170</y>
+     <width>1001</width>
+     <height>531</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout"/>
+  </widget>
  </widget>
  <resources/>
  <connections/>
