--- a/resource.qrc
+++ b/resource.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>images/cidaicon.png</file>
         <file>images/warning.png</file>
+        <file>images/cidaHome.jpg</file>
+        <file>images/cargarPrueba.jpeg</file>
     </qresource>
 </RCC>
