-Se introducieron los botones para cada tipo de prueba predefinida. -Se introdujo la ventada del visualizador a la aplicacion principal especificamente al MdiArea (como subWindon). Falta: **Ventana Adquisicion de datos *arreglar mensajes y tiempo del log *Cambiar animacion del boton observar **Ventana Modia *Verificar funcionamiento de los botones *cuentas fondo del cielo. *Reiniciar la imagen al completar la observacion, Mejorar. **Interfaz Principal *Mejorar la interfaz principal. *Conectar Botones para cada tipo de prueba. *Crear y conectar la base de datos. *Completar ventana del panel administrativo

--- a/simulador.ui
+++ b/simulador.ui
@@ -31,9 +31,72 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="pushButtonNormales">
         <property name="text">
          <string>Normales</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonNublado">
+        <property name="text">
+         <string>Nublado</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonViento">
+        <property name="text">
+         <string>Mucho Viento</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonFoco">
+        <property name="text">
+         <string>Mal Foco</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonObturador">
+        <property name="text">
+         <string>Obturador</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonFlats">
+        <property name="text">
+         <string>Flats</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonDarks">
+        <property name="text">
+         <string>Darks</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonBias">
+        <property name="text">
+         <string>Bias</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonPrisma">
+        <property name="text">
+         <string>Prisma</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonDedos">
+        <property name="text">
+         <string>Dedos</string>
         </property>
        </widget>
       </item>
