-Se creo la clase myButtonIcon que servira para crear los iconos en la clase Simulador. Falta: **Ventana Adquisicion de datos *arreglar mensajes y tiempo del log *Cambiar animacion del boton observar **Ventana Modia *Verificar funcionamiento de los botones *cuentas fondo del cielo. *Reiniciar la imagen al completar la observacion, Mejorar. **Interfaz Principal (Clase Simulador) *Mejorar la interfaz principal. *Conectar Botones para cada tipo de prueba (Cambiar la leyenda). *Crear y conectar la base de datos. *Completar ventana del panel administrativo

--- a/resource.qrc
+++ b/resource.qrc
@@ -4,5 +4,7 @@
         <file>images/warning.png</file>
         <file>images/cidaHome.jpg</file>
         <file>images/cargarPrueba.jpeg</file>
+        <file>images/fedora17.png</file>
+        <file>images/iconControlS.jpg</file>
     </qresource>
 </RCC>
