--- a/simulador.ui
+++ b/simulador.ui
@@ -167,9 +167,24 @@
      <string>Archivo</string>
     </property>
     <addaction name="separator"/>
+    <addaction name="actionSalir"/>
+   </widget>
+   <widget class="QMenu" name="menuSistema">
+    <property name="title">
+     <string>Sistema</string>
+    </property>
     <addaction name="actionPanel_Administrativo"/>
    </widget>
+   <widget class="QMenu" name="menuAyuda">
+    <property name="title">
+     <string>Ayuda</string>
+    </property>
+    <addaction name="actionManual"/>
+    <addaction name="actionSoporte"/>
+   </widget>
    <addaction name="menuAbrir"/>
+   <addaction name="menuSistema"/>
+   <addaction name="menuAyuda"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -200,6 +215,21 @@
    </property>
    <property name="toolTip">
     <string>Cargar Prueba</string>
+   </property>
+  </action>
+  <action name="actionSalir">
+   <property name="text">
+    <string>Salir</string>
+   </property>
+  </action>
+  <action name="actionManual">
+   <property name="text">
+    <string>Manual</string>
+   </property>
+  </action>
+  <action name="actionSoporte">
+   <property name="text">
+    <string>Acerca</string>
    </property>
   </action>
  </widget>
