--- a/gui/terminal.ui
+++ b/gui/terminal.ui
@@ -10,6 +10,18 @@
     <height>360</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>680</width>
+    <height>360</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>680</width>
+    <height>360</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
